@@ -29,6 +29,7 @@ Version 0.1.3 (2010-??-??)
 - Fixed: InsertTags could output HTML in meta description
 - Fixed: Status labels were not available in order history
 - Fixed multiple URL problems in address book module
+- Fixed multiple URL and template problems in shopping cart module
 
 Version 0.1.2 (2010-06-20)
 ------------------------------
